# adk-agents

./: .dockerignore  .gitignore  Dockerfile  README.md  adk_sessions.db  gunicorn.conf.py  openapi.yaml  optimize.txt  pyproject.toml
.gemini/: GEMINI.md
adk_bug_ticket_agent/: apps.py  prompt.py  urls.py  views.py
adk_bug_ticket_agent/templates/adk_agent/: chat.html  interact.html
adk_bug_ticket_agent/templates/adk_bug_ticket_agent/: chat.html
adk_bug_ticket_agent/tools/: apps.py  tools.py  view_v2.py
mcp-server/mcp-toolbox/: tools.yaml
sql/: data.sql
